# Advance_Personal_Diary

./: CSS_README.md  HTML_README.md  JS_README.md  PYTHON_README.md  README.md  main.py  pyproject.toml  requirements.txt
diary_entries/: entries.json
