[project]
name = "personal-diary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "emoji>=2.14.1",
    "fpdf>=1.7.2",
    "html2text>=2024.2.26",
    "markdown>=3.8",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "reportlab>=4.3.1",
    "streamlit>=1.44.1",
    "streamlit-aggrid>=1.0.5",
    "streamlit-lottie>=0.0.5",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
]
